# bornly

./: .gitignore  MANIFEST.in  README plots.ipynb  README.md  bornly.py  scatterplot.ipynb  setup.cfg  test_bornly.py
bornly/: __init__.py
bornly/_seaborn/seaborn/: _core.py  axisgrid.py  categorical.py  cm.py  matrix.py  regression.py  relational.py  utils.py
