[metadata]
name = bornly
version = 0.1.1
description = Seaborn-like API for some plotly plots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarcoGorelli/bornly
author = Marco Gorelli
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = bornly
install_requires =
    pandas
    plotly
    scipy
python_requires = >=3.6.0

[options.packages.find]
exclude =
    tests*

[flake8]
extend-ignore = E203,E503
max-line-length = 120
exclude = venv,.*
